@@ -1,3 +1,9 @@
+2008-08-12  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-style.c: (conv_to_widget_cb), (prepare_list): when
+	adding an unknown theme to the list because it has been selected use
+	the corresponding default icon to represent it
+
 2008-07-29  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-main.c: (main):
